network-policy/pod-level/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: db-test
spec:
   podSelector:
      matchLabels:
         name: mysql
   policyTypes:
      - Ingress
   ingress:
      - from:
           - podSelector:
                matchLabels:
                   role: backend
        ports:
           - port: 3306
